feat: harden inventory service